<resources>
    <string name="content_authority">com.github.n1try.popularmovies</string>
    <string name="display_date_format">EEE, MMM d, yyyy</string>
    <string name="app_name">Popular Movies</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_top_rated_movies">Top Rated Movies</string>
    <string name="sort_order">Sort order</string>
    <string name="most_popular">Most popular</string>
    <string name="favorite">Favorites</string>
    <string name="top_rated">Top rated</string>
    <string name="label_summary">Summary</string>
    <string name="label_genres">Genres</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_rating">Rating</string>
    <string name="label_popularity">Popularity</string>
    <string name="main_loading_title">Loading</string>
    <string name="main_loading_text">Wait while movies are being fetched...</string>
    <string name="offline_message">Could not fetch movies from the internet. Maybe a connection issue?</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Reviews</string>
    <string name="alert_unstarred">Movie was removed from your favorites</string>
    <string name="alert_unstarred_error">Could not remove movie from your favorites</string>
    <string name="alert_starred">Added movie to your favorites</string>
    <string name="alert_starred_error">Could not add movie to your favorites</string>
</resources>
