<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/details_movie_cover_iv"
        android:layout_width="185dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/details_rating_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/details_movie_cover_iv"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_rating_tv"
                style="@style/GiantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rating_container"
                android:gravity="center"
                android:hint="7.3"
                app:layout_constraintStart_toEndOf="@+id/details_movie_cover_iv"
                app:layout_constraintTop_toTopOf="@+id/details_movie_cover_iv" />

            <TextView
                android:id="@+id/textView8"
                style="@style/SmallLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/label_rating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_popularity_tv"
                style="@style/GiantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rating_container_secondary"
                android:gravity="center"
                android:hint="542"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/details_rating_tv" />

            <TextView
                android:id="@+id/textView9"
                style="@style/SmallLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/label_popularity"
                app:layout_constraintEnd_toEndOf="@+id/details_popularity_tv"
                app:layout_constraintStart_toStartOf="@+id/details_popularity_tv"
                app:layout_constraintTop_toBottomOf="@+id/details_popularity_tv" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        style="@style/SmallLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_genres"
        app:layout_constraintStart_toEndOf="@+id/details_movie_cover_iv"
        app:layout_constraintTop_toBottomOf="@+id/details_rating_container" />

    <TextView
        android:id="@+id/details_genres_tv"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="130dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_release_date"
        style="@style/SmallLabelText"
        app:layout_constraintStart_toStartOf="@+id/details_genres_tv"
        app:layout_constraintTop_toBottomOf="@+id/details_genres_tv" />

    <TextView
        android:id="@+id/details_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        style="@style/NormalText"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/SmallLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_summary"
        app:layout_constraintStart_toStartOf="@+id/details_movie_cover_iv"
        app:layout_constraintTop_toBottomOf="@+id/details_movie_cover_iv" />

    <TextView
        android:id="@+id/details_summary_tv"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.5"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>