<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/details_movie_cover_placeholder_container"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimaryLight"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/details_movie_cover_placeholder_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_photo_camera_black_48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <ImageView
                android:id="@+id/details_movie_cover_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:minHeight="220dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/details_content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/details_title_tv"
                    style="@style/HeadingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/details_rating_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_title_tv">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/details_rating_tv"
                            style="@style/FigureText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_rating_container"
                            android:gravity="center"
                            android:hint="7.3"
                            app:layout_constraintStart_toEndOf="@+id/details_movie_cover_iv"
                            app:layout_constraintTop_toTopOf="@+id/details_movie_cover_iv" />

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/SmallLabelText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/label_rating" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/details_popularity_tv"
                            style="@style/FigureText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_rating_container_secondary"
                            android:gravity="center"
                            android:hint="542"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/details_rating_tv" />

                        <TextView
                            android:id="@+id/textView9"
                            style="@style/SmallLabelText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/label_popularity"
                            app:layout_constraintEnd_toEndOf="@+id/details_popularity_tv"
                            app:layout_constraintStart_toStartOf="@+id/details_popularity_tv"
                            app:layout_constraintTop_toBottomOf="@+id/details_popularity_tv" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_genres"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/details_content_container"
                    app:layout_constraintTop_toBottomOf="@+id/details_rating_container" />

                <TextView
                    android:id="@+id/details_genres_tv"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_release_date"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/details_genres_tv" />

                <TextView
                    android:id="@+id/details_date_tv"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_summary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/details_date_tv" />

                <TextView
                    android:id="@+id/details_summary_tv"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/details_trailers_label_tv"
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_trailers"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/details_summary_tv" />

                <ListView
                    android:id="@+id/details_trailers_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/details_trailers_label_tv"
                    app:layout_constraintStart_toStartOf="@+id/details_trailers_label_tv"
                    app:layout_constraintTop_toBottomOf="@+id/details_trailers_label_tv" />


            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="36dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>